# lib/api-spec/openapi.yaml
@@ -593,6 +593,9 @@ components:
           type: integer
         customerName:
           type: string
+        customerEmail:
+          type: string
+          nullable: true
         customerPhone:
           type: string
         customerAddress:
@@ -620,6 +623,9 @@ components:
       properties:
         customerName:
           type: string
+        customerEmail:
+          type: string
+          nullable: true
         customerPhone:
           type: string
         customerAddress:
